<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.CustomerActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:contentDescription="@string/name"
        android:hint="@string/name"
        android:singleLine="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/testAutomationName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/frame_work"
        android:hint="@string/frame_work"
        android:singleLine="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/frame_work" />

    <EditText
        android:id="@+id/codeLanguage"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/code_language"
        android:hint="@string/code_language"
        android:singleLine="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testAutomationName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submit"
        android:layout_width="165dp"
        android:layout_height="76dp"
        android:layout_marginBottom="44dp"
        android:text="Submit"
        app:backgroundTint="#C8C7C7"
        app:iconTint="#6A6969"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="115dp"
        android:layout_height="106dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeLanguage"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/fulltimePosition"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:text="@string/full_time"
            tools:text="@string/full_time"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/contractPosition"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/contractor"
            tools:text="@string/contractor"
            tools:visibility="visible" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/jenkinsBasics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ci_cd"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/ci_cd"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>